@@ -1,5 +1,6 @@
 2010-11-17  Steffen Kamper  <steffen@typo3.org>
 
+	* Fixed bug #16320: Prepare userauthgroup to support custom staging (Thanks to Tolleiv Nietsch)
 	* Fixed bug #16436: Call to undefined method SC_mod_tools_em_index::uploadExtensionToTER()
 
 2010-11-17  Jochen Rau <jochen.rau@typoplanet.de>
